Revert "Revert "fix color contrast""
This reverts commit 692b3425d4aa4af28e732ab2259e234aec9cd336.

--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,7 @@ header {
     color: #282828;
 }
 .nav > li > a:hover {
-    color: #ec8339;
+    color: #933E10;
 }
 main {
     padding-top: 99px;
